[gd_scene load_steps=4 format=3 uid="uid://dwhgtolel07g5"]

[ext_resource type="Script" path="res://scripts/grave_spot.gd" id="1_dbmoq"]

[sub_resource type="SphereShape3D" id="SphereShape3D_tw5jw"]
radius = 2.0

[sub_resource type="ViewportTexture" id="ViewportTexture_5awxc"]
viewport_path = NodePath("InteractionPrompt/SubViewport")

[node name="GraveSpot" type="Node3D"]
script = ExtResource("1_dbmoq")

[node name="InteractionArea" type="Area3D" parent="."]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.655396, 0)
shape = SubResource("SphereShape3D_tw5jw")

[node name="InteractionPrompt" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
visible = false
billboard = 1
no_depth_test = true
texture = SubResource("ViewportTexture_5awxc")

[node name="SubViewport" type="SubViewport" parent="InteractionPrompt"]
size = Vector2i(100, 100)
render_target_update_mode = 4

[node name="Label" type="Label" parent="InteractionPrompt/SubViewport"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -82.5
offset_right = 33.5
offset_bottom = 82.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 120
text = "E"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="area_entered" from="InteractionArea" to="." method="_on_player_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_player_exited"]
